# nn.rs

./: Cargo.toml  README.md  test.txt
cfg/: hyp.json  model.json  test.yaml
src/: main.rs
src/blas/: mod.rs  mult.rs
src/cfg/: test.yaml
src/nn/: activation.rs  connection.rs  convolutional_layer.rs  layer.rs  mod.rs  model.rs  network.rs  node.rs  state.rs
src/nn/layers/: conv.rs  deep.rs  fc.rs  mod.rs  traits.rs
src/tensor/: mod.rs  shape.rs  tensor.rs
src/util/: config.rs  data.rs  dtypes.rs  misc.rs  mod.rs  parser.rs
