[package]
name = "r_nn"
version = "0.1.0"
authors = ["blake-espeland <blake.espeland@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
regex = "1"
json = "0.12.4"
num = "0.1.25"
ndarray = "0.15.6"